--- a/sass.css
+++ b/sass.css
@@ -1,1 +1,17 @@
-/* No CSS *//*# sourceMappingURL=sass.css.map */
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  border: 1px solid red;
+  background-image: url(./img/web-developer-at-work-wallpaper-preview.jpg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+/*# sourceMappingURL=sass.css.map */
