--- a/sass.css
+++ b/sass.css
@@ -14,4 +14,25 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.container .navbar-s {
+  width: 100%;
+  height: 70px;
+  border: 1px solid black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.container .navbar-s .navbar-text-s {
+  width: 50%;
+  height: 500px;
+  border: 1px solid black;
+}
 /*# sourceMappingURL=sass.css.map */
