--- a/sass.scss
+++ b/sass.scss
@@ -11,4 +11,18 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    .navbar-s {
+        width: 100%;
+        height: 70px;
+        border: 1px solid black;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .navbar-text-s {
+            width: 50%;
+            height: 500px;
+            border: 1px solid black;
+        }
+    }
+
 }
