--- a/sass.css
+++ b/sass.css
@@ -32,4 +32,32 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.text-a {
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.img-a {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 50px;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.img-a .all1 {
+  width: 25%;
+  height: 200px;
+}
+
+.img-a .all1 img {
+  width: 100%;
+  height: 100%;
+}
 /*# sourceMappingURL=sass.css.map */
