--- a/sass.scss
+++ b/sass.scss
@@ -24,3 +24,24 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+.text-a{
+    width: 60%;
+    margin: 0 auto;
+    text-align: center;
+}
+.img-a{
+    width: 100%;
+    height: auto;
+    display: flex;
+    margin-top: 50px;
+    justify-content: space-evenly;
+    .all1{
+        width: 25%;
+        height: 200px;
+        img{
+            width: 100%;
+            height: 100%;
+        }
+    }
+}
+
