--- a/sass.scss
+++ b/sass.scss
@@ -6,22 +6,44 @@
 .container {
     width: 100%;
     height: 100vh;
-    border: 1px solid red;
     background-image: url(./img/web-developer-at-work-wallpaper-preview.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     .navbar-s {
-        width: 100%;
+        width: 98%;
         height: 70px;
-        border: 1px solid black;
         display: flex;
-        justify-content: center;
+        justify-content: end;
         align-items: center;
-        .navbar-text-s {
-            width: 50%;
-            height: 500px;
-            border: 1px solid black;
+        i {
+            font-size: 50px;
+            color: black;
+        }
+    }
+    .text-s {
+        width: 50%;
+        height: 500px;
+        text-align: center;
+        color: white;
+        h1 {
+            font-size: 120px;
+            color: white;
+        }
+        h2 {
+            padding-top: 20px;
+        }
+
+        button {
+            width: 150px;
+            height: 40px;
+            background-color: transparent;
+            border: 1px solid wheat;
+            color: white;
+            margin-top: 50px;
         }
     }
 
